projects/6/proj6/code/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl
    3      | single_input

    4 single_input: NEWLINE
    5             | stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | %empty

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | %empty

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 $@1: %empty

   20 funcdef: DEF NAME $@1 parameters COLON suite

   21 parameters: LPAR varargslist RPAR
   22           | LPAR RPAR

   23 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   24            | fpdef opt_EQUAL_test star_COMMA_fpdef

   25 opt_EQUAL_test: EQUAL test
   26               | %empty

   27 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   28                 | %empty

   29 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   30                    | %empty

   31 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   32                     | DOUBLESTAR NAME

   33 fpdef: NAME
   34      | LPAR fplist RPAR

   35 fplist: fpdef star_fpdef_notest

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   39 small_stmt: expr_stmt
   40           | print_stmt
   41           | del_stmt
   42           | pass_stmt
   43           | flow_stmt
   44           | import_stmt
   45           | global_stmt
   46           | exec_stmt
   47           | assert_stmt

   48 expr_stmt: testlist augassign pick_yield_expr_testlist
   49          | testlist star_EQUAL

   50 pick_yield_expr_testlist: yield_expr
   51                         | testlist

   52 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   53           | %empty

   54 augassign: PLUSEQUAL
   55          | MINEQUAL
   56          | STAREQUAL
   57          | SLASHEQUAL
   58          | PERCENTEQUAL
   59          | AMPEREQUAL
   60          | VBAREQUAL
   61          | CIRCUMFLEXEQUAL
   62          | LEFTSHIFTEQUAL
   63          | RIGHTSHIFTEQUAL
   64          | DOUBLESTAREQUAL
   65          | DOUBLESLASHEQUAL

   66 $@2: %empty

   67 print_stmt: PRINT $@2 opt_test
   68           | PRINT RIGHTSHIFT test opt_test_2

   69 opt_test: test star_COMMA_test
   70         | %empty

   71 opt_test_2: plus_COMMA_test
   72           | %empty

   73 del_stmt: DEL exprlist

   74 pass_stmt: PASS

   75 flow_stmt: break_stmt
   76          | continue_stmt
   77          | return_stmt
   78          | raise_stmt
   79          | yield_stmt

   80 break_stmt: BREAK

   81 continue_stmt: CONTINUE

   82 return_stmt: RETURN testlist
   83            | RETURN

   84 yield_stmt: yield_expr

   85 raise_stmt: RAISE test opt_test_3
   86           | RAISE

   87 opt_COMMA_test: COMMA test
   88               | %empty

   89 opt_test_3: COMMA test opt_COMMA_test
   90           | %empty

   91 import_stmt: import_name
   92            | import_from

   93 import_name: IMPORT dotted_as_names

   94 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   95            | FROM plus_DOT IMPORT pick_STAR_import

   96 star_DOT: DOT star_DOT
   97         | %empty

   98 plus_DOT: DOT plus_DOT
   99         | DOT

  100 pick_STAR_import: STAR
  101                 | LPAR import_as_names RPAR
  102                 | import_as_names

  103 import_as_name: NAME AS NAME
  104               | NAME

  105 dotted_as_name: dotted_name AS NAME
  106               | dotted_name

  107 import_as_names: import_as_name star_COMMA_import_as_name

  108 dotted_as_names: dotted_as_name
  109                | dotted_as_names COMMA dotted_as_name

  110 dotted_name: NAME
  111            | dotted_name DOT NAME

  112 global_stmt: global_stmt COMMA NAME
  113            | GLOBAL NAME

  114 exec_stmt: EXEC expr IN test opt_COMMA_test
  115          | EXEC expr

  116 assert_stmt: ASSERT test COMMA test
  117            | ASSERT test

  118 compound_stmt: if_stmt
  119              | while_stmt
  120              | for_stmt
  121              | try_stmt
  122              | with_stmt
  123              | funcdef
  124              | classdef
  125              | decorated

  126 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  127        | IF test COLON suite star_ELIF

  128 star_ELIF: ELIF test COLON suite star_ELIF
  129          | %empty

  130 while_stmt: WHILE test COLON suite ELSE COLON suite
  131           | WHILE test COLON suite

  132 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  133         | FOR exprlist IN testlist COLON suite

  134 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  135         | TRY COLON suite FINALLY COLON suite

  136 plus_except: except_clause COLON suite plus_except
  137            | except_clause COLON suite

  138 opt_ELSE: ELSE COLON suite
  139         | %empty

  140 opt_FINALLY: FINALLY COLON suite
  141            | %empty

  142 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  143 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  144                     | %empty

  145 with_item: test AS expr
  146          | test

  147 except_clause: EXCEPT test opt_AS_COMMA
  148              | EXCEPT

  149 pick_AS_COMMA: AS
  150              | COMMA

  151 opt_AS_COMMA: pick_AS_COMMA test
  152             | %empty

  153 suite: simple_stmt
  154      | NEWLINE INDENT plus_stmt DEDENT

  155 plus_stmt: stmt plus_stmt
  156          | stmt

  157 testlist_safe: old_test plus_COMMA_old_test
  158              | old_test

  159 old_test: or_test
  160         | old_lambdef

  161 old_lambdef: LAMBDA varargslist COLON old_test
  162            | LAMBDA COLON old_test

  163 test: or_test opt_IF_ELSE
  164     | lambdef

  165 opt_IF_ELSE: IF or_test ELSE test
  166            | %empty

  167 or_test: and_test
  168        | or_test OR and_test

  169 and_test: not_test
  170         | and_test AND not_test

  171 not_test: NOT not_test
  172         | comparison

  173 comparison: expr
  174           | comparison comp_op expr

  175 comp_op: LESS
  176        | GREATER
  177        | EQEQUAL
  178        | GREATEREQUAL
  179        | LESSEQUAL
  180        | GRLT
  181        | NOTEQUAL
  182        | IN
  183        | NOT IN
  184        | IS
  185        | IS NOT

  186 expr: xor_expr
  187     | expr BAR xor_expr

  188 xor_expr: and_expr
  189         | xor_expr CIRCUMFLEX and_expr

  190 and_expr: shift_expr
  191         | and_expr AMPERSAND shift_expr

  192 shift_expr: arith_expr
  193           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  194 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  195                          | RIGHTSHIFT

  196 arith_expr: term
  197           | arith_expr pick_PLUS_MINUS term

  198 pick_PLUS_MINUS: PLUS
  199                | MINUS

  200 term: factor
  201     | term pick_multop factor

  202 pick_multop: STAR
  203            | SLASH
  204            | PERCENT
  205            | DOUBLESLASH

  206 factor: pick_unop factor
  207       | power

  208 pick_unop: PLUS
  209          | MINUS
  210          | TILDE

  211 power: atom star_trailer DOUBLESTAR factor
  212      | atom star_trailer

  213 star_trailer: trailer star_trailer
  214             | %empty

  215 atom: LPAR opt_yield_test RPAR
  216     | LSQB opt_listmaker RSQB
  217     | LBRACE opt_dictorsetmaker RBRACE
  218     | BACKQUOTE testlist1 BACKQUOTE
  219     | NAME
  220     | NUMBER
  221     | FLOAT
  222     | plus_STRING

  223 pick_yield_expr_testlist_comp: yield_expr
  224                              | testlist_comp

  225 opt_yield_test: pick_yield_expr_testlist_comp
  226               | %empty

  227 opt_listmaker: listmaker
  228              | %empty

  229 opt_dictorsetmaker: dictorsetmaker
  230                   | %empty

  231 plus_STRING: STRING plus_STRING
  232            | STRING

  233 listmaker: test list_for
  234          | test star_COMMA_test

  235 testlist_comp: test comp_for
  236              | test star_COMMA_test

  237 lambdef: LAMBDA varargslist COLON test
  238        | LAMBDA COLON test

  239 trailer: LPAR opt_arglist RPAR
  240        | LSQB subscriptlist RSQB
  241        | DOT NAME

  242 subscriptlist: subscript star_COMMA_subscript

  243 subscript: DOT DOT DOT
  244          | test
  245          | opt_test_only COLON opt_test_only opt_sliceop

  246 opt_test_only: test
  247              | %empty

  248 opt_sliceop: sliceop
  249            | %empty

  250 sliceop: COLON test
  251        | COLON

  252 exprlist: expr star_COMMA_expr

  253 testlist: test star_COMMA_test

  254 dictorsetmaker: test COLON test pick_comp_for
  255               | test pick_for_test

  256 pick_comp_for: comp_for
  257              | star_test_COLON_test

  258 pick_for_test: comp_for
  259              | star_COMMA_test

  260 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  261         | CLASS NAME COLON suite

  262 opt_testlist: testlist
  263             | %empty

  264 arglist: argument COMMA arglist
  265        | argument COMMA
  266        | argument
  267        | listarg COMMA arglist_postlist
  268        | listarg
  269        | dictarg

  270 argument: test opt_comp_for
  271         | test EQUAL test

  272 opt_comp_for: comp_for
  273             | %empty

  274 list_iter: list_for
  275          | list_if

  276 list_for: FOR exprlist IN testlist_safe list_iter
  277         | FOR exprlist IN testlist_safe

  278 list_if: IF old_test list_iter
  279        | IF old_test

  280 comp_iter: comp_for
  281          | comp_if

  282 comp_for: FOR exprlist IN or_test comp_iter
  283         | FOR exprlist IN or_test

  284 comp_if: IF old_test comp_iter
  285        | IF old_test

  286 testlist1: test
  287          | testlist1 COMMA test

  288 encoding_decl: NAME

  289 yield_expr: YIELD testlist
  290           | YIELD

  291 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  292                  | COMMA
  293                  | %empty

  294 star_COMMA_expr: COMMA expr star_COMMA_expr
  295                | COMMA
  296                | %empty

  297 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  298                 | COMMA
  299                 | %empty

  300 star_COMMA_test: COMMA test star_COMMA_test
  301                | COMMA
  302                | %empty

  303 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  304                     | COMMA
  305                     | %empty

  306 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  307                     | COMMA
  308                     | %empty

  309 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  310                          | COMMA
  311                          | %empty

  312 plus_COMMA_test: COMMA test plus_COMMA_test
  313                | COMMA test COMMA
  314                | COMMA test

  315 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  316                    | COMMA old_test COMMA
  317                    | COMMA old_test

  318 dictarg: DOUBLESTAR test

  319 listarg: STAR test

  320 arglist_postlist: argument COMMA arglist_postlist
  321                 | dictarg
  322                 | argument

  323 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  324                        | SEMI
  325                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 59
AMPERSAND (259) 191
AND (260) 170
AS (261) 103 105 145 149
ASSERT (262) 116 117
AT (263) 11 12
BACKQUOTE (264) 218
BAR (265) 187
BREAK (266) 80
CIRCUMFLEX (267) 189
CIRCUMFLEXEQUAL (268) 61
CLASS (269) 260 261
COLON (270) 20 126 127 128 130 131 132 133 134 135 136 137 138 140
    142 161 162 237 238 245 250 251 254 260 261 303
COMMA (271) 27 29 87 89 109 112 116 143 150 264 265 267 287 291 292
    294 295 297 298 300 301 303 304 306 307 309 310 312 313 314 315
    316 317 320
CONTINUE (272) 81
DEDENT (273) 154
DEF (274) 20
DEL (275) 73
DOT (276) 96 98 99 111 241 243
DOUBLESLASH (277) 205
DOUBLESLASHEQUAL (278) 65
DOUBLESTAR (279) 29 32 211 318
DOUBLESTAREQUAL (280) 64
ELIF (281) 128
ELSE (282) 126 130 132 138 165
ENDMARKER (283) 6
EQEQUAL (284) 177
EQUAL (285) 25 52 271
EXCEPT (286) 147 148
EXEC (287) 114 115
FINALLY (288) 135 140
FOR (289) 132 133 276 277 282 283
FROM (290) 94 95
GLOBAL (291) 113
GREATER (292) 176
GREATEREQUAL (293) 178
GRLT (294) 180
IF (295) 126 127 165 278 279 284 285
IMPORT (296) 93 94 95
IN (297) 114 132 133 182 183 276 277 282 283
INDENT (298) 154
IS (299) 184 185
LAMBDA (300) 161 162 237 238
LBRACE (301) 217
LEFTSHIFT (302) 194
LEFTSHIFTEQUAL (303) 62
LESS (304) 175
LESSEQUAL (305) 179
LPAR (306) 11 21 22 34 101 215 239 260
LSQB (307) 216 240
MINEQUAL (308) 55
MINUS (309) 199 209
NAME (310) 20 29 31 32 33 103 104 105 110 111 112 113 219 241 260 261
    288
NEWLINE (311) 4 7 11 12 38 154
NOT (312) 171 183 185
NOTEQUAL (313) 181
NUMBER (314) 220
FLOAT (315) 221
OR (316) 168
PASS (317) 74
PERCENT (318) 204
PERCENTEQUAL (319) 58
PLUS (320) 198 208
PLUSEQUAL (321) 54
PRINT (322) 67 68
RAISE (323) 85 86
RBRACE (324) 217
RETURN (325) 82 83
RIGHTSHIFT (326) 68 195
RIGHTSHIFTEQUAL (327) 63
RPAR (328) 11 21 22 34 101 215 239 260
RSQB (329) 216 240
SEMI (330) 323 324
SLASH (331) 203
SLASHEQUAL (332) 57
STAR (333) 31 100 202 319
STAREQUAL (334) 56
STRING (335) 231 232
TILDE (336) 210
TRY (337) 134 135
VBAREQUAL (338) 60
WHILE (339) 130 131
WITH (340) 142
YIELD (341) 289 290


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
start (88)
    on left: 1 2 3, on right: 0
single_input (89)
    on left: 4 5, on right: 3
file_input (90)
    on left: 6, on right: 1
pick_NEWLINE_stmt (91)
    on left: 7 8, on right: 9
star_NEWLINE_stmt (92)
    on left: 9 10, on right: 6 9
decorator (93)
    on left: 11 12, on right: 15 16
opt_arglist (94)
    on left: 13 14, on right: 11 239
decorators (95)
    on left: 15 16, on right: 15 17 18
decorated (96)
    on left: 17 18, on right: 125
funcdef (97)
    on left: 20, on right: 18 123
$@1 (98)
    on left: 19, on right: 20
parameters (99)
    on left: 21 22, on right: 20
varargslist (100)
    on left: 23 24, on right: 21 161 237
opt_EQUAL_test (101)
    on left: 25 26, on right: 24 27 297
star_fpdef_COMMA (102)
    on left: 27 28, on right: 23 27
opt_DOUBLESTAR_NAME (103)
    on left: 29 30, on right: 31
pick_STAR_DOUBLESTAR (104)
    on left: 31 32, on right: 23
fpdef (105)
    on left: 33 34, on right: 24 27 35 291 297
fplist (106)
    on left: 35, on right: 34
stmt (107)
    on left: 36 37, on right: 5 8 155 156
simple_stmt (108)
    on left: 38, on right: 36 153
small_stmt (109)
    on left: 39 40 41 42 43 44 45 46 47, on right: 38 323
expr_stmt (110)
    on left: 48 49, on right: 39
pick_yield_expr_testlist (111)
    on left: 50 51, on right: 48 52
star_EQUAL (112)
    on left: 52 53, on right: 49 52
augassign (113)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 48
print_stmt (114)
    on left: 67 68, on right: 40
$@2 (115)
    on left: 66, on right: 67
opt_test (116)
    on left: 69 70, on right: 67
opt_test_2 (117)
    on left: 71 72, on right: 68
del_stmt (118)
    on left: 73, on right: 41
pass_stmt (119)
    on left: 74, on right: 42
flow_stmt (120)
    on left: 75 76 77 78 79, on right: 43
break_stmt (121)
    on left: 80, on right: 75
continue_stmt (122)
    on left: 81, on right: 76
return_stmt (123)
    on left: 82 83, on right: 77
yield_stmt (124)
    on left: 84, on right: 79
raise_stmt (125)
    on left: 85 86, on right: 78
opt_COMMA_test (126)
    on left: 87 88, on right: 89 114
opt_test_3 (127)
    on left: 89 90, on right: 85
import_stmt (128)
    on left: 91 92, on right: 44
import_name (129)
    on left: 93, on right: 91
import_from (130)
    on left: 94 95, on right: 92
star_DOT (131)
    on left: 96 97, on right: 94 96
plus_DOT (132)
    on left: 98 99, on right: 95 98
pick_STAR_import (133)
    on left: 100 101 102, on right: 94 95
import_as_name (134)
    on left: 103 104, on right: 107 309
dotted_as_name (135)
    on left: 105 106, on right: 108 109
import_as_names (136)
    on left: 107, on right: 101 102
dotted_as_names (137)
    on left: 108 109, on right: 93 109
dotted_name (138)
    on left: 110 111, on right: 11 12 94 105 106 111
global_stmt (139)
    on left: 112 113, on right: 45 112
exec_stmt (140)
    on left: 114 115, on right: 46
assert_stmt (141)
    on left: 116 117, on right: 47
compound_stmt (142)
    on left: 118 119 120 121 122 123 124 125, on right: 37
if_stmt (143)
    on left: 126 127, on right: 118
star_ELIF (144)
    on left: 128 129, on right: 126 127 128
while_stmt (145)
    on left: 130 131, on right: 119
for_stmt (146)
    on left: 132 133, on right: 120
try_stmt (147)
    on left: 134 135, on right: 121
plus_except (148)
    on left: 136 137, on right: 134 136
opt_ELSE (149)
    on left: 138 139, on right: 134
opt_FINALLY (150)
    on left: 140 141, on right: 134
with_stmt (151)
    on left: 142, on right: 122
star_COMMA_with_item (152)
    on left: 143 144, on right: 142 143
with_item (153)
    on left: 145 146, on right: 142 143
except_clause (154)
    on left: 147 148, on right: 136 137
pick_AS_COMMA (155)
    on left: 149 150, on right: 151
opt_AS_COMMA (156)
    on left: 151 152, on right: 147
suite (157)
    on left: 153 154, on right: 20 126 127 128 130 131 132 133 134
    135 136 137 138 140 142 260 261
plus_stmt (158)
    on left: 155 156, on right: 154 155
testlist_safe (159)
    on left: 157 158, on right: 276 277
old_test (160)
    on left: 159 160, on right: 157 158 161 162 278 279 284 285 315
    316 317
old_lambdef (161)
    on left: 161 162, on right: 160
test (162)
    on left: 163 164, on right: 25 68 69 85 87 89 114 116 117 126 127
    128 130 131 145 146 147 151 165 233 234 235 236 237 238 244 246
    250 253 254 255 270 271 286 287 300 303 312 313 314 318 319
opt_IF_ELSE (163)
    on left: 165 166, on right: 163
or_test (164)
    on left: 167 168, on right: 159 163 165 168 282 283
and_test (165)
    on left: 169 170, on right: 167 168 170
not_test (166)
    on left: 171 172, on right: 169 170 171
comparison (167)
    on left: 173 174, on right: 172 174
comp_op (168)
    on left: 175 176 177 178 179 180 181 182 183 184 185, on right:
    174
expr (169)
    on left: 186 187, on right: 114 115 145 173 174 187 252 294
xor_expr (170)
    on left: 188 189, on right: 186 187 189
and_expr (171)
    on left: 190 191, on right: 188 189 191
shift_expr (172)
    on left: 192 193, on right: 190 191 193
pick_LEFTSHIFT_RIGHTSHIFT (173)
    on left: 194 195, on right: 193
arith_expr (174)
    on left: 196 197, on right: 192 193 197
pick_PLUS_MINUS (175)
    on left: 198 199, on right: 197
term (176)
    on left: 200 201, on right: 196 197 201
pick_multop (177)
    on left: 202 203 204 205, on right: 201
factor (178)
    on left: 206 207, on right: 200 201 206 211
pick_unop (179)
    on left: 208 209 210, on right: 206
power (180)
    on left: 211 212, on right: 207
star_trailer (181)
    on left: 213 214, on right: 211 212 213
atom (182)
    on left: 215 216 217 218 219 220 221 222, on right: 211 212
pick_yield_expr_testlist_comp (183)
    on left: 223 224, on right: 225
opt_yield_test (184)
    on left: 225 226, on right: 215
opt_listmaker (185)
    on left: 227 228, on right: 216
opt_dictorsetmaker (186)
    on left: 229 230, on right: 217
plus_STRING (187)
    on left: 231 232, on right: 222 231
listmaker (188)
    on left: 233 234, on right: 227
testlist_comp (189)
    on left: 235 236, on right: 224
lambdef (190)
    on left: 237 238, on right: 164
trailer (191)
    on left: 239 240 241, on right: 213
subscriptlist (192)
    on left: 242, on right: 240
subscript (193)
    on left: 243 244 245, on right: 242 306
opt_test_only (194)
    on left: 246 247, on right: 245
opt_sliceop (195)
    on left: 248 249, on right: 245
sliceop (196)
    on left: 250 251, on right: 248
exprlist (197)
    on left: 252, on right: 73 132 133 276 277 282 283
testlist (198)
    on left: 253, on right: 48 49 51 82 132 133 262 289
dictorsetmaker (199)
    on left: 254 255, on right: 229
pick_comp_for (200)
    on left: 256 257, on right: 254
pick_for_test (201)
    on left: 258 259, on right: 255
classdef (202)
    on left: 260 261, on right: 17 124
opt_testlist (203)
    on left: 262 263, on right: 260
arglist (204)
    on left: 264 265 266 267 268 269, on right: 13 264
argument (205)
    on left: 270 271, on right: 264 265 266 320 322
opt_comp_for (206)
    on left: 272 273, on right: 270
list_iter (207)
    on left: 274 275, on right: 276 278
list_for (208)
    on left: 276 277, on right: 233 274
list_if (209)
    on left: 278 279, on right: 275
comp_iter (210)
    on left: 280 281, on right: 282 284
comp_for (211)
    on left: 282 283, on right: 235 256 258 272 280
comp_if (212)
    on left: 284 285, on right: 281
testlist1 (213)
    on left: 286 287, on right: 218 287
encoding_decl (214)
    on left: 288, on right: 2
yield_expr (215)
    on left: 289 290, on right: 50 84 223
star_fpdef_notest (216)
    on left: 291 292 293, on right: 35 291
star_COMMA_expr (217)
    on left: 294 295 296, on right: 252 294
star_COMMA_fpdef (218)
    on left: 297 298 299, on right: 24 297
star_COMMA_test (219)
    on left: 300 301 302, on right: 69 234 236 253 259 300
star_test_COLON_test (220)
    on left: 303 304 305, on right: 257 303
star_COMMA_subscript (221)
    on left: 306 307 308, on right: 242 306
star_COMMA_import_as_name (222)
    on left: 309 310 311, on right: 107 309
plus_COMMA_test (223)
    on left: 312 313 314, on right: 71 312
plus_COMMA_old_test (224)
    on left: 315 316 317, on right: 157 315
dictarg (225)
    on left: 318, on right: 269 321
listarg (226)
    on left: 319, on right: 267 268
arglist_postlist (227)
    on left: 320 321 322, on right: 267 320
small_stmt_STAR_OR_SEMI (228)
    on left: 323 324 325, on right: 38 323


State 0

    0 $accept: . start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BACKQUOTE  shift, and go to state 3
    BREAK      shift, and go to state 4
    CLASS      shift, and go to state 5
    CONTINUE   shift, and go to state 6
    DEF        shift, and go to state 7
    DEL        shift, and go to state 8
    EXEC       shift, and go to state 9
    FOR        shift, and go to state 10
    FROM       shift, and go to state 11
    GLOBAL     shift, and go to state 12
    IF         shift, and go to state 13
    IMPORT     shift, and go to state 14
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 20
    NEWLINE    shift, and go to state 21
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PASS       shift, and go to state 25
    PLUS       shift, and go to state 26
    PRINT      shift, and go to state 27
    RAISE      shift, and go to state 28
    RETURN     shift, and go to state 29
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
    TRY        shift, and go to state 32
    WHILE      shift, and go to state 33
    WITH       shift, and go to state 34
    YIELD      shift, and go to state 35

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 36
    single_input       go to state 37
    file_input         go to state 38
    pick_NEWLINE_stmt  go to state 39
    star_NEWLINE_stmt  go to state 40
    decorator          go to state 41
    decorators         go to state 42
    decorated          go to state 43
    funcdef            go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    pick_unop          go to state 82
    power              go to state 83
    atom               go to state 84
    plus_STRING        go to state 85
    lambdef            go to state 86
    testlist           go to state 87
    classdef           go to state 88
    encoding_decl      go to state 89
    yield_expr         go to state 90


State 1

  116 assert_stmt: ASSERT . test COMMA test
  117            | ASSERT . test

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31

    test         go to state 92
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 2

   11 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 93

    dotted_name  go to state 94


State 3

  218 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31

    test         go to state 95
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86
    testlist1    go to state 96


State 4

   80 break_stmt: BREAK .

    $default  reduce using rule 80 (break_stmt)


State 5

  260 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  261         | CLASS . NAME COLON suite

    NAME  shift, and go to state 97


State 6

   81 continue_stmt: CONTINUE .

    $default  reduce using rule 81 (continue_stmt)


State 7

   20 funcdef: DEF . NAME $@1 parameters COLON suite

    NAME  shift, and go to state 98


State 8

   73 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 100


State 9

  114 exec_stmt: EXEC . expr IN test opt_COMMA_test
  115          | EXEC . expr

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31

    expr         go to state 101
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85


State 10

  132 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  133         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 102


State 11

   94 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   95            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 103

    $default  reduce using rule 97 (star_DOT)

    star_DOT  go to state 104
    plus_DOT  go to state 105


State 12

  113 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 106


State 13

  126 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  127        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 91
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    FLOAT      shift, and go to state 24
    PLUS       shift, and go to state 26
    STRING     shift, and go to state 30
    TILDE      shift, and go to state 31
